Update caption in Project

--- a/ImageClassification-RockPaperScissors.ipynb
+++ b/ImageClassification-RockPaperScissors.ipynb
@@ -308,7 +308,7 @@
    "metadata": {},
    "source": [
     "# Evaluation\n",
-    "Setelah training kita akan melakukan evaluasi model."
+    "Setelah training kita akan melakukan visualisasi evaluasi model."
    ]
   },
   {
